--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,21 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+    "manifest_version": 2,
+    "name": "Foobar",
+    "version": "1.0",
+    "description": "Foobar extension made with React.",
+    "icons": {
+        "192": "logo192.png",
+        "512": "logo512.png"
     },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
+    "browser_action": {
+        "default_icon": "logo192.png",
+        "default_title": "Foobar",
+        "default_popup": "index.html"
     },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+    "devtools_page": "devtools.html",
+    "sidebar_action": {
+        "default_icon": "logo192.png",
+        "default_title": "Foobar",
+        "default_panel": "index.html"
     }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
 }
